--- a/php/inc/styles.css
+++ b/php/inc/styles.css
@@ -89,18 +89,32 @@ body {
 HOME.PHP STYLING 
 */
 
-.pool_top_row, .pool_row {
-	padding:6px;
-}
+/*BEGIN POOL TABLE STYLING*/
+	.pool_top_row, .pool_row {
+		padding:6px;
+	}
 
-.pool_status {
-	padding:6px;
-	font-weight:bold;
-}
+	.pool_status {
+		padding:6px;
+		font-weight:bold;
+	}
 
-.pool_top_row{
-	font-weight:bold;
-}
+	.pool_top_row{
+		font-weight:bold;
+	}
+
+	.pool_column {
+		width:20%;
+	}
+
+	.pool_status_column {
+		width:50%;
+	}
+
+	.pool_leader_column {
+		width:30%;
+	}
+/*END POOL TABLE STYLING*/
 
 #pool_invite_list {
 	margin-left:30px;
