improved look of edit_pool_categories_nonMC.php and edit_pool.php, made edit categories the default tab on edit_pool.php, fixed bug with setting end date to be the same as start date - error will now not get thrown if end time has not been set

--- a/php/inc/styles.css
+++ b/php/inc/styles.css
@@ -125,6 +125,11 @@ HOME.PHP STYLING
 CREATE_POOL.PHP STYLING
 */
 
+.edit_settings_instruction{
+	margin-left:5px;
+	font-style:italic;
+}
+
 .field_label {
 	margin-left:20px; 
 	font-style:italic;
