created functionality for a template editor as well as the user to create multiple choice pools from scratch and score them - final testing needs to be done as of 11:45 pm 4/2/14

--- a/php/inc/styles.css
+++ b/php/inc/styles.css
@@ -125,6 +125,10 @@ HOME.PHP STYLING
 CREATE_POOL.PHP STYLING
 */
 
+#create_new_pool_form{
+	margin-left:15px;
+}
+
 .edit_settings_instruction{
 	margin-left:5px;
 	font-style:italic;
